Settings: Adapt changes for Phoenix
Signed-off-by: naz664 <nazimnavas145@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3013,6 +3013,8 @@
 
     <!-- About phone screen, status item label  [CHAR LIMIT=40] -->
     <string name="firmware_version">Android version</string>
+    <!-- Phoenix version -->
+    <string name="phoenix_version">Phoenix version</string>
     <!-- About phone screen, status item label  [CHAR LIMIT=60] -->
     <string name="security_patch">Android security update</string>
     <!-- About phone screen, status item label  [CHAR LIMIT=40] -->
